--- a/wade.css
+++ b/wade.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Open Sans', sans-serif;
-  line-height: 1.5;
+  font-family: 'Nunito';
+  font-size:1rem;
   margin: 0;
   padding: 3rem;
   display: flex;
