--- a/wade.css
+++ b/wade.css
@@ -1,11 +1,49 @@
 body {
   font-family: 'Nunito';
-  font-size:1rem;
+  font-size:0.9em;
   margin: 0;
   padding: 3rem;
   display: flex;
   flex-direction: column;
+  background-color:aliceblue;
 }
-img {
-  max-width: 80%;
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+
+}
+.banner img {
+  max-width: 100%;
+}
+.hero {
+  display: flex;
+  justify-content: center;
+  padding-top: 1.4rem;
+  padding-bottom: 1rem;
+}
+.hero img{
+  max-width: 100%;
+}
+#disclaimer {
+  display: flex;
+  font-size: 0.8em;
+  width: 85%;
+  padding-left: 1.4rem;
+  padding-bottom: 6px;
+}
+#test1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+#test1 p {
+  line-height: 1.5rem;
+}
+#test1 img {
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+  margin-right: 20px;
 }
