--- a/maddie.css
+++ b/maddie.css
@@ -12,8 +12,13 @@ h2 {color:#ff90e8 ;
 
 p {color: #ffc900;
     text-align: left;
-    font-size: 25px
-}
+    font-size: 30px;}
+.top {display: flex; 
+    flex-direction: row;
+    flex-wrap:nowrap;
+    align-content: center;
+    justify-content: space-around;
+    }
 
 .layout3 {display: flex;
     flex-direction: row;
