finished nav and added a few basics

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,10 @@
     --lavender: #90a8ed;
     --white: #fafaf1;
     --black: #333;
+    --bright: #fff;
   }
 
-  * {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -54,14 +55,14 @@ body {
     justify-self: end;
 }
 
-.nav-links {
+.nav-menu a{
     color: var(--white);
     text-decoration: none;
 
 }
 
-.nav-links:hover {
-    color: var(--yellow);
+.nav-menu a:hover {
+    color: var(--white);
     transition: all 0.2s ease-out;
 }
 
@@ -102,7 +103,7 @@ body {
         margin: 0;
         width: 100%;
         position: absolute;
-        top: 80px;
+        top: 70px;
         left: -100%;
         opacity: 0;
         transition: all 0.5s ease;
@@ -140,20 +141,20 @@ body {
 
     .nav-btn {
         border: none;
-        padding: 0;
-        border-radius: 10;
-        background-color: var(--pink);
+        padding: 6px 16px;
+        border-radius: 4px;
         color: var(--white);
         transition: all 0.4s ease-out;
     }
 
     .nav-btn:hover {
-        border: none;
-        padding: 0;
-        border-radius: 10;
-        background-color: var(--teal);
+        background-color: transparent;
         color: var(--white);
-        transition: all 0.4s ease-out;
+        padding: 5px 15px;
+        border-radius: 4px;
+        border: solid 1px var(--bright);
+        transition: all 0.3s ease-out;
+    
     }
 
     #mobile-menu {
