--- a/wade.css
+++ b/wade.css
@@ -1,3 +1,10 @@
+:root {
+  --teal: #23a094;
+  --pink: #ff90e8;
+  --yellow: #ffc900;
+  --lavender: #90a8ed;
+}
+
 body {
   font-family: 'Nunito';
   font-size:0.92rem;
@@ -6,6 +13,11 @@ body {
   display: flex;
   flex-direction: column;
   background-color:aliceblue;
+  min-width: 300px;
+  color: #2f3636
+}
+.banner{
+  padding-top: 2rem;
 }
 .banner img {
  max-width: 85%;
@@ -21,12 +33,27 @@ body {
   border-radius: 8px;
   box-shadow: -3px 4.5px 8px rgba(0, 0, 0, 0.28);
 }
+#about {
+  border: 5.5px solid var(--lavender);
+  border-radius: 8px;
+  padding: 1rem;
+  background-color: var(--lavender)
+}
 #disclaimer {
   display: flex;
   font-size: 0.8em;
+  color:hsla(240, 100%, 99%, 0.768);
   width: 85%;
   padding-left: 1.4rem;
   padding-bottom: 6px;
+}
+
+.testimonials {
+  border: 5.5px solid var(--pink);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: #ff90e8;
 }
 #test1 {
   display: flex;
@@ -34,7 +61,7 @@ body {
   align-items: center;
 }
 #test1 p {
-  line-height: 1.5rem;
+  line-height: 1.4rem;
 }
 #test1 img {
   width: 62px;
@@ -43,6 +70,14 @@ body {
   margin-right: 20px;
   box-shadow: -2px 3px 5px rgba(0, 0, 0, 0.65);
 }
+
+.contact {
+  border: 5.5px solid var(--yellow);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: var(--yellow)
+}
 @media (min-width: 600px) {
   body {
     font-size: 1rem;
@@ -50,6 +85,8 @@ body {
   }
   .banner {
     min-width: 90%;
+    padding-top: 0.75rem;
+    padding-bottom: 1.5rem;
   }    
   .hero, #disclaimer {
     min-width: 95%;
@@ -67,6 +104,8 @@ body {
   }
   .banner {
     width: 75%;
+    padding-top: 0.25rem;
+    padding-bottom: 1.25rem;
   } 
   .hero, #disclaimer {
     width: 70%;
