--- a/styles.css
+++ b/styles.css
@@ -91,25 +91,40 @@ body {
     background: var(--white);
 }
 
+.main-img-container { 
+    display: inline-block;
+    margin-left: 60vw;
+    padding-bottom: 5%;
+}
+
 .testimonials-container {
     display: grid;
+    align-content: center;
+    justify-content: center;
 
+}
+
+#main-img {
+    max-width: 40vw;
+    border-radius: 10%;
 }
 
 .testimonials {
-    border: dotted 1px var(--teal);
-    max-width: 40vw;
+    text-align: left;
+    max-width: 700px;
     display: inline;
     padding: 20px;
-    margin-bottom: 10px;
+    margin: 5px 5px 5px 15px;
 }
 
 .testimonials img {
-    padding-right: 20px;
+    padding: 20px 20px 20px 0px;
     width: 150px;
     float: left;
 }
-
+.customer {
+    font-style: oblique;
+}
 @media screen and (max-width: 768px) {
     .nav-container {
         position: relative;
