--- a/wade.css
+++ b/wade.css
@@ -1,159 +1,150 @@
-:root {
-  --teal: #23a094;
-  --pink: #ff90e8;
-  --yellow: #ffc900;
-  --lavender: #90a8ed;
-}
 
-body {
+.main {
   font-family: 'Nunito';
-  font-size:0.9rem;
   margin: 0;
-  padding: 1.25rem;
+  color: #2f3636;  
+  font-size:1.2rem;
   display: flex;
   flex-direction: column;
-  background-color:hsl(210, 59%, 93%);
-  min-width: 280px;
-  color: #2f3636
+  padding: 6rem;
+  max-width: 1280px;
+  margin-left: 0.5rem;
 }
-h2, p {
-  padding-left: 0.15rem;
-  padding-right: 0.15rem;
-}
-.banner{
-  padding-top: 2rem;
-}
-.banner img {
- max-width: 85%;
-}
-.hero {
-  display: flex;
-  justify-content: center;
-  padding-top: 1.4rem;
-  padding-bottom: 0.85rem;
-  margin-bottom: 0.45em;
-  margin-left: 0.1em;
-}
-.hero img {
-  display: flex;
-  justify-content: center;
-  max-width: 100%;
-  border-radius: 8px;
-  box-shadow: -3px 4.5px 8px rgba(0, 0, 0, 0.28);
-}
+  .banner{
+    padding-top: 0.1rem;
+    padding-bottom: 2rem;
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 2px;
+    padding-right: 6px;
+    }
+    .banner img {
+      max-width:100%;
+    }
+    .hero {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 3.5rem;
+    }
+    .hero img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: -3px 4.5px 8px rgba(0, 0, 0, 0.28);
+    }
+    #disclaimer {
 
-.about {
-  max-width: 91.5%;
-  border: solid var(--lavender);
-  border-radius: 8px;
-  padding: 1rem;
-  padding-bottom: 2.2rem;
-  background-color: var(--lavender)
-}
+      width: 80%;
+      
+      padding-left: 5rem;
 
-#test1 img {
-  width: 80px;
-  height: 80px;
-}
-#disclaimer {
-  display: flex;
-  font-size: 0.8em;
-  color:hsla(240, 100%, 99%, 0.768);
-  width: 85%;
-  padding-left: 1.4rem;
-  padding-bottom: 6px;
-}
+      display: flex;
 
-.testimonials {
-  border: solid var(--pink);
-  border-radius: 8px;
-  padding: 1rem;
-  padding-bottom: 2rem;
-  margin-top: 1rem;
-  background-color: #ff90e8;
-  max-width: 91.5%;
-}
-#test1 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-#test1 p {
-  line-height: 1.35rem;
-  margin-left: 1rem;
-}
-#test1 img {
-  width: 62px;
-  height: 62px;
-  border-radius: 50%;
-  margin-right: 2px;
-  box-shadow: -2px 3px 5px rgba(0, 0, 0, 0.65);
-}
+      font-size: 0.8em;
 
-.contact {
-  border: solid var(--yellow);
-  border-radius: 8px;
-  padding: 1rem;
-  padding-bottom: 1.5rem;
-  margin-top: 1rem;
-  background-color: var(--yellow);
-  max-width: 91.5%;
-}
-@media (min-width: 600px) {
-  body {
+      color:hsla(240, 100%, 99%, 0.768);  
+      
+      padding-right: 1.5rem;
+      }
+      h2, p {
+
+        padding-left: 1.5rem;
+
+        padding-right: 1.5rem;
+
+        padding-bottom: 0.75rem;
+        
+        }
+        .about, .testimonials, .contact {
+          border-radius: 8px;
+          padding: 1.5rem;
+          padding-bottom: 2rem;
+          margin-bottom: 1rem;
+          margin-top: 0.5rem;
+          max-width: 100%;
+        }
+        .about {
+          background-color: var(--lavender);
+        }
+        .testimonials {
+          background-color: var(--pink);
+        }
+        #test1, #test2 {
+
+          display: flex;
+          
+          flex-direction: row;
+          
+          align-items: center;
+
+          padding-bottom: 1rem;
+          padding-top: 1rem;
+          
+          }
+        .testimonials p {
+          margin-left: 1rem;
+        }
+        .testimonials img {
+          border: 0px solid var(--pink);
+          border-radius: 50%;
+          width: 90px;
+          padding: 0;
+          margin: 0;
+          box-shadow: -2px 3px 5px rgba(0, 0, 0, 0.65);
+        }
+        .contact {
+          background-color: var(--yellow);
+        }
+        .contact ul {
+          padding-bottom: 0.8rem;
+        }
+        .contact li {
+          padding-left: 4rem;
+        }
+
+@media screen and (max-width: 768px) {
+  .main {
     font-size: 1rem;
-    padding: 4rem;
+    margin: 0;
+    padding: 1.2rem;
   }
-  .banner {
-    min-width: 90%;
-    padding-top: 0.75rem;
-    padding-bottom: 1.5rem;
-  }    
-  .hero {
-    width: 96.9%;
-  }
-  #disclaimer {
-    width: 85%;
-    padding-left: 2.5rem;
-  }
-  h2, p {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-  #test1 img {
-    width: 62px;
-    height: 62px;
-    margin-left: 1rem;
-  }
-}
-@media (min-width: 900px) {
-  body {
-    font-size: 1.125rem;
-    max-width: 1080px;
-    padding: 6rem;
-  }
-  h2, p {
-    padding-left: 1.8rem;
-    padding-right: 2rem;
-  }
-  .banner {
-    width: 75%;
-    padding-top: 0.25rem;
-    padding-bottom: 1.25rem;
-    padding-left: 2rem;
-  } 
-  .hero {
-    min-width: 94%;
-    max-width: 95%;
-    margin-bottom: 0.6rem;
-    margin-left: 0;
-  }
-  #disclaimer {
-    width: 80%;
-    padding-left: 5rem;
-    padding-right: 2rem;
-  }
-  img {
-    margin-left: 0;
-  }
+    .banner{
+     padding-top: 1.2rem;
+     padding-bottom: 1.4rem;
+      }
+      .banner img{
+        max-width:100%;
+
+      }
+      .hero {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 1.3rem;
+      }
+      .hero img {
+        width: 100%;
+      }
+      h2, p {
+
+        padding-left: 0.1rem;
+        
+        padding-right: 0.1rem;
+        
+        }
+        #disclaimer {
+          font-size: 0.8em;
+          width: 95%;
+          padding-right: 0.38rem;
+          padding-left: 1.25rem;
+          padding-top: 0.25rem;
+        }
+        .contact li {
+          padding-left: 1.2rem;
+        }
+        .contact, .testimonials {
+          padding-bottom: 1.2rem;
+        }
+      
 }
