--- a/wade.css
+++ b/wade.css
@@ -54,8 +54,13 @@
 
         padding-right: 1.5rem;
 
-        padding-bottom: 0.75rem;
+        padding-bottom: 1rem;
         
+        }
+
+        h2 {
+          padding-top: 0.75rem;
+          padding-bottom: 1.25rem;
         }
         .about, .testimonials, .contact {
           border-radius: 8px;
@@ -132,6 +137,10 @@
         
         padding-right: 0.1rem;
         
+        }
+        h2 {
+          padding-top: 0;
+          padding-bottom: 1.15rem;
         }
         #disclaimer {
           font-size: 0.8em;
