--- a/wade.css
+++ b/wade.css
@@ -9,6 +9,16 @@
   max-width: 1280px;
 
 }
+.nav-menu li a{
+  transition:ease-in-out;
+  transition-duration: 325ms;
+}
+.nav-menu li:hover a {
+  color: var(--pink);
+  font-weight: bold;
+  font-size: 108%;
+}
+
 
 .banner {
   padding-bottom: 2.5rem;
@@ -159,6 +169,12 @@ h2 {
   .contact,
   .testimonials {
     padding-bottom: 1.2rem;
+  }
+  
+  .nav-menu li:hover a {
+    color: var(--white);
+    font-weight: normal;
+    font-size: 100%;
   }
 }
 
