--- a/ross.css
+++ b/ross.css
@@ -7,8 +7,29 @@ body {
 .capybara {
     display: flex;
   justify-content: center;
-  width: 480px;
-  height: 480px;
+  width: 400px;
+  height: 400px;
   padding-top: 1.4rem;
   padding-bottom: 0.85rem;
+}
+
+.styleA {
+  padding-left: 300px;
+  color: bisque;
+  font-size: 50px;
+}
+.bullet {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; 
+  padding-left: 20px;
+  font-size: 35px;
+}
+.capybaras {
+  display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap; 
+    align-content: center;
+    align-items: center;
+    padding-left: 100px;
 }
