--- a/ross.css
+++ b/ross.css
@@ -11,6 +11,7 @@ body {
   height: 400px;
   padding-top: 1.4rem;
   padding-bottom: 0.85rem;
+  padding-left: 6.0rem;
 }
 
 .styleA {
@@ -19,9 +20,7 @@ body {
   font-size: 50px;
 }
 .bullet {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; 
+  align-self: center; 
   padding-left: 20px;
   font-size: 35px;
 }
@@ -32,4 +31,12 @@ body {
     align-content: center;
     align-items: center;
     padding-left: 100px;
+}
+.CI
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
 }
