--- a/wendy.css
+++ b/wendy.css
@@ -24,7 +24,7 @@
 /*Applying style to body elements*/
 body {
     font-family: "Nunito";
-    background-color: var(--white);
+    background-color: var(--lavender);
     color: var(--black);
 }
 
@@ -56,7 +56,6 @@ a {
 a:hover {
     color: var(--yellow);
 }
-
 
 /* diff Sections stylings */
 .bio, .services, .testimonials, .contact {
@@ -93,7 +92,6 @@ a:hover {
     color: var(--pink);
 }
 
-
 /* Contact style */
 .contact p {
     margin-top: 10px;
@@ -122,4 +120,54 @@ a:hover {
 .services li {
     text-align: left; 
     margin-left: 20px; 
+}
+
+/*add this in for tablet and mobile friendly*/
+@media (max-width: 800px) {
+    .content-container {
+        flex-direction: column;
+    }
+
+    .services, .testimonials {
+        flex-basis: 100%; 
+        margin: 10px;
+    }
+
+    .bio, .services, .testimonials, .contact {
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 8px;
+        text-align: center;
+    }
+
+    .dog-images {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding: 0;
+        margin: 0;
+    }
+
+    .dog-images figure {
+        flex: 1 1 45%; 
+        margin: 10px;
+        text-align: center;
+        box-sizing: border-box; 
+    }
+
+    .dog-images img {
+        width: 100%; 
+        max-height: 200px; 
+        object-fit: cover; 
+        border-radius: 8px;
+    }
+
+    .dog-images figcaption {
+        margin-top: 5px;
+        color: var(--pink);
+    }
+
+    .contact p {
+        margin-top: 10px;
+    }
 }
