--- a/maddie.css
+++ b/maddie.css
@@ -1,5 +1,5 @@
 body {background-color: #23a094;
-    font-family: "Nunito",sans-serif}
+    font-family: "Nunito"}
 
 :root {
     --teal: #23a094;
@@ -7,42 +7,59 @@ body {background-color: #23a094;
     --yellow: #ffc900;
     --lavender: #90a8ed;}
 
-h2 {color:#ff90e8 ;
+h1 {color:#ffc900;
     text-align: center;
     font-size: 50px}
 
+h2 {color:#ff90e8 ;
+    text-align: left;
+    font-size: 30px}
+
+h4 {color:#ff90e8 ;
+    text-align: center;
+    font-size: 20px}
+
 p {color: #ffc900;
     text-align: left;
-    font-size: 30px;}
-.top {display: flex; 
-    flex-direction: row;
-    flex-wrap:nowrap;
-    align-content: center;
-    justify-content: space-around;
-    }
+    font-size: 20px;}
+    
+* {box-sizing: border-box;}
 
-.flexbox {display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap; 
-    align-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    column-gap: 5px;
-    row-gap: 5px;
-    padding: 5px;
-    transition: opacity 1s ease-in-out;}
-.image-container:hover {opacity: 50%;} 
-
-.image-container img {
-    display: inline-block;
-    height: auto;}
+header {
+    padding: 15px;
+    text-align: center;}
   
-.overlay-text {
-    position: absolute;
-    top: 50%;
-    left: 25%;
-    transform: translate(-50%, -50%); 
-    color: midnightblue; 
-    padding: 10px 20px; 
-    font-size: 30px; 
-    text-align: center; }
+  /* Container for flexboxes */
+  section {
+    display: -webkit-flex;
+    display: flex;}
+  
+  /* Style the content */
+  article {
+    -webkit-flex: 3;
+    -ms-flex: 3;
+    flex: 3;}
+  
+  /* Style the footer */
+  footer {
+    padding: 5px;
+    text-align: center;
+    color: white;
+  }
+  
+.images {
+    float: left;
+    width: 25%;
+    padding: 5px;
+    transition: opacity .5s ease-in-out;
+    font-size: 23px;
+    color: #ffc900;
+    text-align: center;}
+
+.team:after {
+    content: "";
+    clear: both;
+    display: table;}
+
+.images:hover {opacity: 50%;} 
+  
