--- a/maddie.css
+++ b/maddie.css
@@ -1,5 +1,5 @@
 body {background-color: #23a094;
-    font-family: "Nunito"}
+    font-family: "Nunito", sans-serif;"}
 
 :root {
     --teal: #23a094;
@@ -11,9 +11,13 @@ h1 {color:#ffc900;
     text-align: center;
     font-size: 50px}
 
-h2 {color:#ff90e8 ;
+h2 {color:#90a8ed; ;
+    text-align: center;
+    font-size: 35px}
+
+h3 {color:#ff90e8 ;
     text-align: left;
-    font-size: 30px}
+    font-size: 20px}
 
 h4 {color:#ff90e8 ;
     text-align: center;
@@ -29,18 +33,16 @@ header {
     padding: 15px;
     text-align: center;}
   
-  /* Container for flexboxes */
   section {
     display: -webkit-flex;
     display: flex;}
   
-  /* Style the content */
   article {
     -webkit-flex: 3;
     -ms-flex: 3;
     flex: 3;}
   
-  /* Style the footer */
+
   footer {
     padding: 5px;
     text-align: center;
@@ -52,7 +54,7 @@ header {
     width: 25%;
     padding: 5px;
     transition: opacity .5s ease-in-out;
-    font-size: 23px;
+    font-size: 20px;
     color: #ffc900;
     text-align: center;}
 
