--- a/maddie.css
+++ b/maddie.css
@@ -33,21 +33,19 @@ header {
     padding: 15px;
     text-align: center;}
   
-  section {
+section {
     display: -webkit-flex;
     display: flex;}
   
-  article {
+article {
     -webkit-flex: 3;
     -ms-flex: 3;
     flex: 3;}
   
-
   footer {
     padding: 5px;
     text-align: center;
-    color: white;
-  }
+    color: white;}
   
 .images {
     float: left;
