--- a/maddie.css
+++ b/maddie.css
@@ -1,31 +1,22 @@
-body {background-color: #23a094;
-    font-family: "Nunito", sans-serif;"}
-
-:root {
-    --teal: #23a094;
-    --pink: #ff90e8;
-    --yellow: #ffc900;
-    --lavender: #90a8ed;}
-
-h1 {color:#ffc900;
+h1 {color:#90a8ed;
     text-align: center;
     font-size: 50px}
 
-h2 {color:#90a8ed; ;
+h2 {color:#ffc900; 
     text-align: center;
     font-size: 35px}
 
-h3 {color:#ff90e8 ;
+h3 {color:#90a8ed;
     text-align: left;
     font-size: 20px}
 
 h4 {color:#ff90e8 ;
     text-align: center;
-    font-size: 20px}
+    font-size: 18px}
 
-p {color: #ffc900;
+p {color: #ff90e8;
     text-align: left;
-    font-size: 20px;}
+    font-size: 18px;}
     
 * {box-sizing: border-box;}
 
@@ -35,14 +26,16 @@ header {
   
 section {
     display: -webkit-flex;
-    display: flex;}
+    display: flex;
+    padding: 50px;}
   
 article {
     -webkit-flex: 3;
     -ms-flex: 3;
-    flex: 3;}
+    flex: 3;
+    padding: 30px }
   
-  footer {
+footer {
     padding: 5px;
     text-align: center;
     color: white;}
@@ -50,10 +43,10 @@ article {
 .images {
     float: left;
     width: 25%;
-    padding: 5px;
+    padding: 7px;
     transition: opacity .5s ease-in-out;
     font-size: 20px;
-    color: #ffc900;
+    color:#90a8ed;
     text-align: center;}
 
 .team:after {
