--- a/wendy.css
+++ b/wendy.css
@@ -35,6 +35,7 @@ h2 {
     color: var(--teal);
     font-family: "Nunito";
     font-weight: var(--font-bold);
+    text-align: center;
 }
 /*styling anchor element used to create hyperlink*/
 a {color: var(--teal); text-decoration: none;}
@@ -42,7 +43,7 @@ a {color: var(--teal); text-decoration: none;}
 a:hover { color: var(--yellow);}
 
 /* diff Sections stylings */
-.bio, .services, .testimonials, .contact {
+.bio, .services, .testimonial, .contact {
     margin-top: 20px;
     padding: 20px;
     border-radius: 8px;
